<resources>
    <string name="app_name">Fyp2</string>
    <string name="welcome">welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="forecast">Forecast</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="enrollment">Enrollment</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="username">Username from main</string>
    <string name="password">Password</string>
    <string name="login_bt">Login</string>
    <string name="login_top"><b><u>Login</u></b></string>
    <string name="signup_top"><b><u>Sign Up</u></b></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="subject_enroll">Subject Enrolled</string>
    <string name="review">Review</string>
    <string name="no_review">No Review / Comment</string>
    <string name="student">Students</string>
    <string name="set_reminder">Set a Reminder</string>
    <string name="forecast_result">Forecast Result</string>
    <string name="time_spent_each_subject">Time Spent On Each Subject</string>

    <string name="no_student">No Student Enrolled in this subject yet</string>
    <string name="enroll_bt">Enroll</string>
    <string name="changeLanguageTips">Are You Sure , You want to change Language?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>