<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
android:background="@drawable/loginbt_bg"
    tools:context=".Fragment.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_position="bottom"
            diagonal:diagonal_direction="right"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            app:layout_constraintTop_toTopOf="parent">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/right" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:elevation="@dimen/_100sdp"
            android:src="@drawable/signup_diaganol"
            android:layout_alignBottom="@id/diagonalLayout"
            android:layout_centerHorizontal="true"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!-- android:layout_marginLeft="@dimen/_20sdp"-->
<!--            android:layout_marginBottom="@dimen/_10sdp"-->
<!--            android:text="Register"-->
<!--            android:elevation="@dimen/_150sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:layout_alignBottom="@id/diagonalLayout"-->
<!--            android:textSize="@dimen/_25sdp"-->
<!--            android:textStyle="bold"/>-->

        <LinearLayout
            android:id="@+id/textll"
            android:layout_below="@id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernametextinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginRight="@dimen/_18sdp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"

                    android:hint="@string/username"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_18sdp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"

                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"

                android:layout_marginRight="@dimen/_18sdp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cfm_password_inputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_18sdp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"

                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.unstoppable.submitbuttonview.SubmitButton
            android:id="@+id/submitbutton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_30sdp"
            app:buttonColor="#636363"
            app:buttonText="Submit"
            app:buttonTextSize="@dimen/_15sdp" />
    </RelativeLayout>

</FrameLayout>