<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:id="@+id/diagonalLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            app:layout_constraintTop_toTopOf="parent"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_direction="left"
            diagonal:diagonal_position="bottom">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="@dimen/_100sdp"


                android:src="@drawable/left" />

        </com.github.florent37.diagonallayout.DiagonalLayout>

        <ImageView

            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"

            android:src="@drawable/signin_diaganol"
            app:layout_constraintBottom_toBottomOf="@+id/diagonalLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
<!--                <com.airbnb.lottie.LottieAnimationView-->
<!--                    android:id="@+id/Viewlottie"-->
<!--                    android:layout_width="@dimen/_180sdp"-->
<!--                    android:layout_height="@dimen/_100sdp"-->
<!--            android:layout_marginBottom="@dimen/_minus35sdp"-->
<!--                    android:elevation="@dimen/_100sdp"-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/logintextrl"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:lottie_autoPlay="true"-->
<!--                    app:lottie_fileName="welcome.json"-->
<!--                    app:lottie_loop="true"></com.airbnb.lottie.LottieAnimationView>-->

        <RelativeLayout
            android:id="@+id/logintextrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.587">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernametextinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"

                    android:hint="@string/username"
                    android:inputType="text"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Address Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usernametextinputlayout"

                android:layout_marginTop="@dimen/_10sdp"

                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <com.royrodriguez.transitionbutton.TransitionButton
            android:id="@+id/transition_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:elevation="@dimen/_300sdp"
            android:text="@string/login_bt"
            android:textColor="#333333"
            app:defaultColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logintextrl"
            app:loaderColor="#a1a1a1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>